Bug 73169 - Arrow keys on weston-keyboard do not respond to touch
Summary: Arrow keys on weston-keyboard do not respond to touch
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-30 21:33 UTC by Anu Reddy
Modified: 2014-01-08 22:21 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Text selection using ABC and < and > (1.43 MB, Video/webm)
2014-01-02 22:35 UTC, Anu Reddy
Details

Description Anu Reddy 2013-12-30 21:33:30 UTC
Weston VKB does not allow arrow keys to move the cursor position for text editing using touch. This makes it difficult to chord keys (shift + arrow key) using touch.

Steps:
1. Ensure Weston.ini is configured to automatically launch the virtual keyboard application (VKB)
2. Launch Weston : weston-launch
3. Launch Weston terminal : weston-terminal
4. Run editor : Weston-editor
5. Click on “Entry” to launch virtual Keyboard. 
6. Enter text using virtual keyboard. 
7. Press arrow keys ( “<” , “>” ) on VKB to move cursor position. Cursor does not move on pressing arrow keys. 
8. Press shift + arrow key on VKB to select the text from weston-editor. User cannot select the text.


Environment :
Kernel:3.9.5-301.fc19.x86_64
wayland (HEAD) 1.3.91-0-g01bde63
drm (HEAD) libdrm-2.4.50-0-g4c5de72
mesa (HEAD) remotes/origin/10.0-0-g6f7da01
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.1-0-g8f306e3
weston (HEAD) remotes/origin/master-0-gdf42a80
efl (HEAD) remotes/origin/efl-1.8-0-g90c2320
elementary (HEAD) remotes/origin/elementary-1.8-0-ge077db6
wayland-fits (HEAD) remotes/origin/HEAD-0-gcd75d94
Comment 1 Kristian Høgsberg 2014-01-02 00:22:40 UTC
Which VKB are you using?  I can not reproduce this using the weston sample on-screen keyboard.  < and > moves the cursor and there is no shift key on the kb, so I'm not sure what you mean in 8).
Comment 2 Anu Reddy 2014-01-02 22:30:11 UTC
I am using the same on-screen keyboard. < and >   does not work with touch . I cannot move the cursor by touching <, > where I can type the text by touching the alphabet keys.  Cursor moves only when clicking on arrow keys ‘< ‘ and ‘ >’ with mouse

I have attached a video. Here I am using ‘ABC’ as my shift key.  I can select the text using shift (ABC) and <  >  keys using mouse.
Comment 3 Anu Reddy 2014-01-02 22:35:14 UTC
Created attachment 91439 [details]
Text selection using ABC and < and >
Comment 4 Kristian Høgsberg 2014-01-08 06:25:09 UTC
commit ef9c8eb2db49ff32788c1d9a4a88fd706017e045
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Jan 7 12:57:59 2014 -0800

    keyboard: Handle touch up event
    
    This fixes arrow keys which trigger on button up.
    
    Closes: https://bugs.freedesktop.org/show_bug.cgi?id=73169


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.